Bug 335251, prevent load events to propagate to window, r=bz, sr=jst