content/base/src/nsDocument.cpp
@@ -3974,7 +3974,13 @@ nsDocument::PreHandleEvent(nsEventChainPreVisitor& aVisitor)
    // FIXME! This is a hack to make middle mouse paste working also in Editor.
    // Bug 329119
   aVisitor.mForceContentDispatch = PR_TRUE;
-  aVisitor.mParentTarget = GetWindow();
+
+  // Load events must not propagate to |window| object, see bug 335251.
+  if (!(aVisitor.mEvent->message == NS_IMAGE_LOAD ||
+        aVisitor.mEvent->message == NS_PAGE_LOAD ||
+        aVisitor.mEvent->message == NS_SCRIPT_LOAD)) {
+    aVisitor.mParentTarget = GetWindow();
+  }
   return NS_OK;
 }
 
